fixed bug:menubar right border overlap links icon

--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ p{
     display: none;
     left: 20px;
     top: -85px;
+    margin-right: 75%;
 }
 
 .menu #sub-menu {
